[tool.poetry]
name = "tutorial-poetry"
version = "0.1.0"
description = ""
authors = ["Aravind"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.1"}
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.32"
passlib = "^1.7.4"
bcrypt = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
